# engineered-commerce

./: compose.yaml
admin/: Dockerfile  package-lock.json  package.json
aspireApp/: .gitignore  apphost.mts  aspire.config.json  package-lock.json  package.json
backend/: .gitignore  Dockerfile  app.js  app.ts  lambda.ts  package-lock.json  package.json  server.ts  serverless.yml  tsconfig.json
backend/controllers/: categoryController.ts  orderItemController.ts  paymentController.ts  productController.ts  redisController.ts  userControllers.ts
backend/jobs/: updatePrices.ts
backend/lib/: authMiddleware.ts  jwtHelper.ts  prisma.ts  upload.ts
backend/prisma/: schema.prisma
backend/routes/: categoryRoutes.ts  orderRoutes.ts  paymentRoutes.ts  productRoutes.ts  redisRoutes.ts  userRoutes.ts
fastapi-backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
fastapi-backend/migrations/: env.py
fastapi-backend/migrations/versions/: 51774eee8b4c_ecommerce_tables.py
fastapi-backend/models/: __init__.py  category.py  order.py  order_item.py  payment.py  payment_status.py  product.py  user.py
fastapi-backend/routes/: __init__.py  categoryRoutes.py  orderRoutes.py  productRoutes.py  userRoutes.py
fastapi-backend/schemas/: orderSchema.py  userSchema.py
fastapi-backend/utils/: db.py  redis.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: StoreProvider.tsx  globals.css  layout.tsx
frontend/app/_components/: CategoriesDropdown.tsx  Header.tsx  ProductDetail.tsx
frontend/app/cart/: page.tsx
frontend/lib/: store.ts
(+10 files in other folders)
