[project]
name = "fastapi-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.14.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "cffi==2.0.0",
    "click==8.4.1",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "fastapi==0.137.2",
    "h11==0.16.0",
    "idna==3.18",
    "psycopg2-binary==2.9.12",
    "psycopg[binary]>=3.3.4",
    "pwdlib==0.3.0",
    "pycparser==3.0",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pyjwt==2.13.0",
    "python-dotenv==1.2.2",
    "redis>=8.0.1",
    "sqlalchemy==2.0.51",
    "sqlalchemy-utils>=0.42.1",
    "sqlmodel==0.0.38",
    "starlette==1.3.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.49.0",
]
